2009-05-20  Douglas Bates <bates@stat.wisc.edu>

	* [r92] DESCRIPTION, man/pedigreemm-class.Rd: New release with corrected
	  links for external S4 classes

2009-05-14  Douglas Bates <bates@stat.wisc.edu>

	* [r90] DESCRIPTION: New release
	* [r89] man/pedigreemm-class.Rd: Rather ugly fix for codoc complaint

2009-04-20  Ana Vazquez <anainesvs@gmail.com>

	* [r88] R/pedigree.R: ZStar

2009-04-16  Douglas Bates <bates@stat.wisc.edu>

	* [r87] DESCRIPTION, R/pedigree.R: Adding lmer_Zstar, new version

2009-04-09  Ana Vazquez <anainesvs@gmail.com>

	* [r86] man/pedCowsR.Rd: modification in pedCowsR.Rd

2009-03-10  Ana Vazquez <anainesvs@gmail.com>

	* [r85] man/pedCowsR.Rd: adding documentation for pedCowsR

2009-03-04  Douglas Bates <bates@stat.wisc.edu>

	* [r84] R/pedigree.R, man/pedigreemm-class.Rd: Corrections to the ranef
	  method

2009-02-26  Ana Vazquez <anainesvs@gmail.com>

	* [r83] data/pedCowsR.rda: modified name in pedCowsR to avoid conflicts

2009-02-26  Douglas Bates <bates@stat.wisc.edu>

	* [r82] man/pedSires.Rd: Remove links to the dC object
	* [r81] NAMESPACE: Export the Dmat function
	* [r80] R/pedigree.R: Remove diff markings

2009-02-25  Ana Vazquez <anainesvs@gmail.com>

	* [r79] data/pedCows.rda, data/pedCowsR.rda: adding a reduced pedCows
	  called pedCowsR
	* [r78] data/pedCows.rda: new file pedCows.rda

2009-02-25  Douglas Bates <bates@stat.wisc.edu>

	* [r77] man/pedigreemm-class.Rd, man/pedigreemm.Rd:
	* [r76] R/pedigree.R: Define ranef method for the pedigreemm class

2009-02-23  Ana Vazquez <anainesvs@gmail.com>

	* [r75] man/inbreeding.Rd: modifications in inbreeding.Rd
	* [r74] man/Dmat.Rd: adding the manual for Dmat function
	* [r73] man/Dmat.Rd: adding the manual for Dmat function
	* [r72] R/pedigree.R, data/dC.rda, data/mp.rda, data/pedCow.rda,
	  man/dC.Rd, man/mp.Rd, man/pedCow.Rd: d

2009-02-16  Ana Vazquez <anainesvs@gmail.com>

	* [r71] data/mastitis.rda, data/milk.rda, data/pedCows.rda: update of